KJHH-2341 update readme